Fix scrollbars on WebKit

--- a/assets/screen-narrow.css
+++ b/assets/screen-narrow.css
@@ -25,7 +25,6 @@ nav {
     left: 0;
     background-color: #E4E9F6;
     z-index: 1;
-    scrollbar-width: initial;
     transition: width ease .2s;
     max-height: initial !important;
     margin: 0;
@@ -37,10 +36,6 @@ html.nav-opened {
 
 .nav-opened nav {
     width: 100vw;
-}
-
-nav::-webkit-scrollbar {
-    display: initial;
 }
 
 main, .navContainer {
